--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -5,3 +5,52 @@
     display: flex;
     justify-content: space-between;
 }
+
+.btn {
+    width: 70px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    font-size: 20px;
+    background: #6f001b;
+    border-radius: 50px;
+    color: #fff;
+    font-weight: 700;
+    font-size: 20px;
+    padding: 0 10px;
+    cursor: pointer;
+    margin-left:10px;
+   }
+   .footer{
+    width: 100%;
+    height: 80px;
+    background: #fff;
+    border-top: 1px solid #ccc;
+    display: flex;
+    justify-content: flex-end;
+    align-items:center;
+    padding: 0 10px;
+   }
+   .footer span{
+    cursor: pointer;
+   }
+   .center{
+    max-height: 340px;
+    overflow-y: auto;
+    background: #fff;
+    padding: 10px 30px;
+   }
+   .center label{
+    width: 100%;
+    display: block;
+    font-size:13px;
+    color: #7f7f7f;
+    margin-bottom:5px;
+    margin-top:10px;
+   }
+   .center  input,.center  select{
+    padding:5px 10px;
+    outline: none;
+    width: 180px;
+   }
