--- a/src/public/scss/home.scss
+++ b/src/public/scss/home.scss
@@ -57,7 +57,6 @@
     }
     .products_list{
         margin-top: 2rem;
-        padding: .125rem 0;
         li{
             padding: .4rem .5rem;
             margin: .25rem 0;
@@ -86,4 +85,5 @@
     line-height: 2.45rem;
     background-color: #985ec9;
     border-radius: .25rem;
+    margin-top: 1rem;
 }
